Minor design changes, update Resume and SOE

--- a/portfolio/styles/global.scss
+++ b/portfolio/styles/global.scss
@@ -244,6 +244,7 @@ a.link-hover {
   font-weight: 400;
   position: relative;
   text-transform: uppercase;
+  text-decoration: underline;
   transition: all 0.25s ease-in-out;
 
   &:before {
